plugins/xpath/xpath-lang/testData/xpath/highlighting/invalidArgument.xpath
last(<error descr="Too many arguments">.</error>)